--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
     <meta property="og:title" content="Thật Nguyễn - Thương hiệu xe cao cấp" />
     <meta property="og:description" content="Thương hiệu cá nhân Thật Nguyễn - Chuyên tư vấn và phân phối xe cao cấp Porsche, Mercedes" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/images/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ThatNguyen" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/images/favicon.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/favicon.png" type="image/png">
   </head>
 
   <body>
